[tool.poetry]
name = "cost-distance"
version = "0.1.0"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.59.1"
rioxarray = "^0.15.3"
geopandas = "^0.14.3"
shapely = "^2.0.3"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
